--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
                 <div class='text-center'>
                     <h1>Welcome to Orinoco!</h1>
+                    <h2 id='finalPrice'></h2>
                 </div>
             </div>
             <div class='col-lg-6 bg-success'>
